syntax = "proto3";

package product_service;
option go_package = "genproto/product_service";

import "product_model.proto";

service ProductService {
  rpc CreateCategory(Category) returns (Category);
  rpc DeleteCategory(GetWithID) returns (MoveResponse);
  rpc UpdateCategory(Category) returns (Category);
  rpc GetCategory(GetWithID) returns (Category);
  rpc ListCategories(ListRequest) returns (ListCategory);
  rpc SearchCategory(SearchRequest) returns (ListProduct);
  rpc UniqueCategory(Params) returns (MoveResponse);

  rpc CreateProduct(Product) returns (GetWithID); 
  rpc UpdateProduct(Product) returns (Product); 
  rpc DeleteProduct(GetWithID) returns (MoveResponse); 
  rpc GetProduct(GetWithID) returns (Product); 
  rpc ListProducts(ListRequest) returns (ListProduct);
  rpc SearchProduct(SearchRequest) returns (ListProduct); 
  rpc GetDiscountProducts(ListRequest) returns (ListProduct);
  rpc GetDisableProducts(ListRequest) returns (ListOrder); 

  rpc LikeProduct(Like) returns (MoveResponse); 
  rpc UserWishlist(SearchRequest) returns (ListProduct); 

  rpc SaveToBasket(BasketCreateReq) returns (GetWithID);
  rpc DeleteFromBasket(DeleteBasket) returns (MoveResponse);
  rpc GetBasket(GetWithID) returns (Basket);

  rpc CreateOrder(Order) returns (GetWithID); 
  rpc GetOrder(GetWithID) returns (Order);
  rpc DeleteOrder(GetWithID) returns (MoveResponse);
  rpc UserOrderHistory(SearchRequest) returns (ListProduct);
}
